--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,3 @@
-sudo: true
 language: python
 python:
 	- '3.6'
@@ -6,7 +5,8 @@ install:
 	- pip install coverage
 before script:
 	- git clone https://github.com/drbyron-github-classroom/ppa-1-sw-testing-qa-spring-2018-team-5
-script: coverage run test_function.py
+script: 
+	- coverage run 
 after_success:
   - wget https://raw.githubusercontent.com/k3rn31p4nic/travis-ci-discord-webhook/master/send.sh
   - chmod +x send.sh
